# pietty

./: .gitignore  README.md  justfile  pyproject.toml  todoist.txt
docs/superpowers/plans/: 2026-06-25-pietty-mvp-multipane-pty.md
docs/superpowers/specs/: 2026-06-25-pietty-design.md
scripts/: diag_osc_leak.py  diag_spawn.py  profile_app.py  profile_startup.py  smoke_bare.py
src/pietty/: app.py  config.py  gridlayout.py  layout.py  mode.py  overview.py  ptyquery.py  render.py  scroll.py  sidebar.py  terminal.py
tests/: test_grid.py  test_layout.py  test_layout_render.py  test_mode.py  test_ptyquery.py  test_render.py  test_scroll.py  test_terminal.py
