[project]
name = "pietty"
version = "0.1.0"
description = "A textual terminal multiplexer"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "textual>=0.60",
    "pyte>=0.8.0",
    "ptyprocess>=0.7.0",
    "rich>=13",
]

[project.scripts]
pietty = "pietty.app:main"

[tool.uv]
package = true

[dependency-groups]
dev = ["pytest>=8", "pytest-asyncio>=0.23"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
